--- a/C101.ipynb
+++ b/C101.ipynb
@@ -23,6 +23,8 @@
         "> Programación Python en el Ámbito Científico\n",
         ">\n",
         "> [Alan Badillo Salas](mailto:alan@nomadacode.com)\n",
+        ">\n",
+        "> Github: [https://github.com/dragonnomada/pycien-2023](https://github.com/dragonnomada/pycien-2023)\n",
         "\n",
         "**Contenido**\n",
         "\n",
