--- a/C101.ipynb
+++ b/C101.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -85,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -198,19 +197,19 @@
         "    DECLARAR VARIABLE n IGUAL A 0\n",
         "    * HINT: n = 0\n",
         "\n",
-        "    MIENTRAS TAMAÑO(n) < 100:\n",
-        "    * HINT: while len(n) < 100:\n",
+        "    MIENTRAS TAMAÑO(pares) < 100:\n",
+        "    * HINT: while len(pares) < 100:\n",
         "\n",
         "      INCREMENTAR n EN 1\n",
         "      * HINT: n += 1\n",
         "\n",
         "      SI n MÓDULO 2 ES 0:\n",
-        "      * HINT: if n % 2 == 0:)\n",
+        "      * HINT: if n % 2 == 0:\n",
         "        AGREGAR n A LISTA pares\n",
         "        * HINT: pares.append(n)\n",
         "\n",
         "    IMPRIMIR pares\n",
-        "    * HINT: print(n)\n",
+        "    * HINT: print(pares)\n",
         "```"
       ],
       "metadata": {
@@ -370,7 +369,7 @@
         "id": "drREWMPp4Lvu",
         "outputId": "6d6d02b8-bcd5-4565-d6a8-14b3d2f1a7e7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,12 +444,12 @@
         "| Formato | Tipo | Ejemplo |\n",
         "| :-----: | :--: | ------- |\n",
         "| `%d` | Entero (`int`) | \"Edad: %d\" % (54) |\n",
-        "| `%f` | Decimal (`floar`) | \"Peso: %f\" % (76.5) |\n",
+        "| `%f` | Decimal (`float`) | \"Peso: %f\" % (76.5) |\n",
         "| `%s` | Texto (`str`) | \"Nombre: %s\" % ('Ana') |\n",
         "| `%s` | Lógico (`bool`) | \"Casado: %s\" % (True) |\n",
         "| `%o` | Octal (`int`) | \"Memoria: %0\" % (87654323) |\n",
         "| `%x` | Hexadecimal minúsculas (`int`) | \"Memoria: %x\" % (87654323) |\n",
-        "| `%x` | Hexadecimal mayúsculas (`int`) | \"Memoria: %x\" % (87654323) |\n",
+        "| `%X` | Hexadecimal mayúsculas (`int`) | \"Memoria: %x\" % (87654323) |\n",
         "\n",
         "> Texto con formato especial (inyección externa)\n",
         "\n",
@@ -509,7 +508,7 @@
         "id": "VJoRe8Pyphm0",
         "outputId": "53ed3497-1de4-45c1-f013-ec101e6d1db9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +654,7 @@
         "id": "Fs9QIF3Pw29z",
         "outputId": "eb4c383e-2740-40dd-8398-2596fcd5d92d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +689,7 @@
         "id": "RmaNGofnxIxd",
         "outputId": "b464cb27-ec1e-4be7-c73c-b6c3fe302b29"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +724,7 @@
         "id": "1Ij-PooexOY1",
         "outputId": "f72910ab-8cee-4050-c631-778a6dd71900"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +759,7 @@
         "id": "PHqzoFFVxcMe",
         "outputId": "9d1a34c4-596c-4bb0-de20-d9ad0033ae88"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,7 +794,7 @@
         "id": "n4aR4yRXxhV5",
         "outputId": "aab38e46-7b4b-4e61-a4a3-f9e4829e245a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +829,7 @@
         "id": "WasrRbNKxkyx",
         "outputId": "e102b9c6-3145-471c-de01-ef44df23b8a4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,7 +864,7 @@
         "id": "YeIYopSZxrcY",
         "outputId": "3facd92a-2643-4300-e510-61a302a20f53"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,7 +899,7 @@
         "id": "a2UQy2dPxvVN",
         "outputId": "338916a0-e653-447b-b404-b6b865c40f51"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,7 +934,7 @@
         "id": "PA7aN2FUxztg",
         "outputId": "a8577f36-a4be-4bd2-f4a7-992f5df61ec1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,7 +976,7 @@
         "id": "PJYEf9CkyyWh",
         "outputId": "e92ffbdd-b6a8-4814-f3e8-69ea395048f4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1020,7 @@
         "id": "flwPsGvZx565",
         "outputId": "64440262-2745-41a1-d749-d83985dcbb90"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,7 +1185,7 @@
         "id": "5Rk-ZA9ssdW8",
         "outputId": "e3466292-ee16-43ff-a0e7-cd8de85d2eb9"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1269,7 +1268,7 @@
         "id": "8vKqTpJG5LZ-",
         "outputId": "1f8261b4-8548-407e-9823-96bfaaf47d29"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1419,7 +1418,7 @@
         "id": "yukPaVUn9tU5",
         "outputId": "e5d1f362-987f-465b-dc94-b7a31ece2671"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1456,7 +1455,7 @@
         "id": "3QBqWA2l93DC",
         "outputId": "d837eafb-f108-4b1a-87d2-4b50eb604bed"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1491,7 +1490,7 @@
         "id": "lIQEEjULCzft",
         "outputId": "8b9c6e17-c5f7-44c7-8099-6797d3eede2c"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1526,9 +1525,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tAxde87F9_si",
-        "outputId": "f088dfbf-ca29-4658-e049-981539442de6"
+        "outputId": "da098542-ee5b-4d29-e6c9-9e75fc3f0ab1"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,7 +1714,7 @@
         "id": "wGlFKBE9G1kQ",
         "outputId": "770e57f1-ae78-493a-9ad6-d7371cb4215b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1743,7 +1742,7 @@
         "id": "6jiAe2asG_Go",
         "outputId": "081d9dca-c8b8-4f9e-b534-47dee55547f6"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1771,7 +1770,7 @@
         "id": "sFPp6ZSuHGJ7",
         "outputId": "d20fb408-7d3a-44b1-a8cd-f19a4f59e159"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1799,7 +1798,7 @@
         "id": "oING9srdHOCZ",
         "outputId": "e12f1150-9e33-4aa0-caef-0b8973b91712"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1827,7 +1826,7 @@
         "id": "3zWV8rqRHWm1",
         "outputId": "e11531ca-6dc4-4fbb-fbe4-91727f054c1d"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1855,7 +1854,7 @@
         "id": "1vFCLu_PHc0E",
         "outputId": "5edf9e4f-9751-4d14-dbbf-b87447116119"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1883,7 +1882,7 @@
         "id": "UD2xpZg1HzWi",
         "outputId": "e82e3998-a57b-4eee-9745-87f405423d7c"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1911,7 +1910,7 @@
         "id": "QAj4GC88H63f",
         "outputId": "645a8632-5e71-4b65-8df8-35fe76cb40b6"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1939,7 +1938,7 @@
         "id": "pVvUYShFIAPh",
         "outputId": "c957e141-3483-44c4-951a-a04588a2c010"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1965,7 +1964,7 @@
         "id": "3xEKBdIsIGl5",
         "outputId": "ded1c46a-e4ee-4825-af0c-c4db47d4b638"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1991,7 +1990,7 @@
         "id": "F__HdLToIKOI",
         "outputId": "7f445f3d-baf1-4e1b-caca-43789340bd9e"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2020,7 +2019,7 @@
       "metadata": {
         "id": "Vc9MvURxIMdH"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2038,7 +2037,7 @@
         "id": "2aHey48HIRHx",
         "outputId": "2e4b738e-455a-4da2-9486-6751caba5c1c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2091,7 +2090,7 @@
         "id": "XYb-75lkJGkT",
         "outputId": "a67f631d-3130-451d-dafa-a7210091a290"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2118,7 +2117,7 @@
         "id": "XzkXy0JOJKvK",
         "outputId": "94995f3d-95a7-4c68-ee0c-d355eab08889"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2148,7 +2147,7 @@
         "id": "st1CoNMMJQT8",
         "outputId": "f51ff149-d373-483f-e8ef-e2c3a79f2d70"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2176,6 +2175,56 @@
     {
       "cell_type": "code",
       "source": [
+        "import math\n",
+        "\n",
+        "f = lambda x: 3 * math.cos(x) - 2\n",
+        "\n",
+        "a = 0\n",
+        "b = 5\n",
+        "\n",
+        "n = 1000\n",
+        "\n",
+        "delta = (b - a) / (n - 1)\n",
+        "\n",
+        "suma = 0\n",
+        "\n",
+        "for i in range(0, n):\n",
+        "  xi = a + delta * i\n",
+        "  xi_1 = a + delta * (i + 1)\n",
+        "\n",
+        "  hi = f(xi)\n",
+        "  hi_1 = f(xi_1)\n",
+        "\n",
+        "  base = xi_1 - xi # delta\n",
+        "  altura = (hi + hi_1) / 2\n",
+        "\n",
+        "  area = base * altura\n",
+        "\n",
+        "  suma = suma + area\n",
+        "\n",
+        "print(suma)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EDIcWjdxrPY9",
+        "outputId": "93df245a-aa4f-4230-f65e-f7f995fe1d0d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-12.882481631877717\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "for i in range(1, 20, 3):\n",
         "  print(\"El valor del iterador es: {}\".format(i))\n",
         "  print(\"El siguiente valor será: {}\".format(i + 3))\n",
@@ -2188,7 +2237,7 @@
         "id": "0k9hu2VwJfLl",
         "outputId": "9e969434-5a8a-4470-a947-5f9d2ffc7847"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2246,7 +2295,7 @@
         "id": "phuRXqg6Jpqt",
         "outputId": "a758306a-4584-4936-8adc-96219c407ca7"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2289,7 +2338,7 @@
         "id": "np96eeQvJ4SR",
         "outputId": "d3ed9e5e-94c9-4094-8f64-0b27c859b562"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2337,7 +2386,7 @@
         "id": "2z91IENgK1mi",
         "outputId": "105b1718-9e1e-462f-bc40-b5884791ef3c"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2483,7 +2532,7 @@
         "id": "OnOEoo0sNcMd",
         "outputId": "6f771bcc-8f4a-4d67-e5f5-df86a7acca33"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2528,7 +2577,7 @@
         "id": "3BkzkTpUN4P0",
         "outputId": "5d05c100-688c-497b-e778-04f817b35191"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2607,7 +2656,7 @@
         "id": "w8JMuh_sOYNt",
         "outputId": "f70771e5-4a72-4a9b-ecc7-39384b99bbf4"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2747,7 +2796,7 @@
         "id": "P8IyX9idTd8k",
         "outputId": "9a08d326-aeed-4fbc-d1cc-5adaa2dc8d45"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2787,7 +2836,7 @@
         "id": "lzhiPDv0T6hR",
         "outputId": "36829f6a-8dde-4073-daa7-6348d2c46062"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2836,7 +2885,7 @@
         "id": "GrVCmUMxUMpH",
         "outputId": "28eebecd-c293-48a7-8d62-fe64fad90631"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2864,7 +2913,7 @@
         "id": "V3B-C9oCWSfO",
         "outputId": "027e78a3-d7d4-4b41-dcf4-9d3bcb9c33ef"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2992,7 +3041,7 @@
         "id": "IAP_rUXra_i9",
         "outputId": "56a025fd-0015-4ad6-d1a1-8d6d9134c43f"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3039,7 +3088,7 @@
         "id": "HhnTmqsGbK1U",
         "outputId": "64ea9276-108b-414c-ed51-0ad55f8d1593"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3062,7 +3111,7 @@
         "id": "5frOarY_bmM6",
         "outputId": "d54ee849-6324-45a0-ec8f-04bcff825d4f"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3105,7 +3154,7 @@
       "metadata": {
         "id": "AWpGNcpccRwS"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3133,7 +3182,7 @@
       "metadata": {
         "id": "gvVr0r11dF_f"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3195,7 +3244,7 @@
         "id": "Ow-lSQBgeUAZ",
         "outputId": "13fe5007-fabe-4dd9-ee86-f05997f83103"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3226,7 +3275,7 @@
         "id": "ybklBBfHgdnV",
         "outputId": "fe51bd3f-799a-443f-a136-25f35a3b98c8"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3261,7 +3310,7 @@
         "id": "klIyEMr3g1kC",
         "outputId": "be3387b4-7658-411f-d55e-a7d19d785cd9"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3361,7 +3410,7 @@
         "id": "zZ8Upmt4kZMP",
         "outputId": "012e36ce-34f4-4924-b964-be17604a4df7"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3422,7 +3471,7 @@
       "metadata": {
         "id": "VyxKf1mtmEXP"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
